tests/samples/negative/functions/c_abi_inferred_return.ax
module c_abi_inferred_return;

export c fn exported() @name("aurex_bad_export") {
    return;
}
